PyMaker/datas/object2/RawHTML/i7201/Python_DOC_referPages.sending-email-with-python-and-error-message-keeps-popping-up.txt
<div class="post-text" itemprop="text">
<p>I am trying to send an email with python and getting errors. Here is my code:</p>
<pre><code>import smtplib

server = smtplib.SMTP('smtp.gmail.com', 465)


server.login("someone@gmail.com", "pass")


msg = "Hello!" # The /n separates the message from the headers
server.sendmail("someone@gmail.com", "someone@gmail.com", msg)
print("Sent")
</code></pre>
<p>This is the error I keep getting</p>
<pre><code>    Traceback (most recent call last):
  File "C:/Users/Kevin/Desktop/Python/email65.py", line 1, in &lt;module&gt;
    import smtplib
  File "C:\Users\Kevin\AppData\Local\Programs\Python\Python36-32\lib\smtplib.py", line 47, in &lt;module&gt;
    import email.utils
  File "C:/Users/Kevin/Desktop/Python\email.py", line 1
    import smtplib from email.mime.multipart
                      ^
SyntaxError: invalid syntax`
</code></pre>
<p>What am i doing wrong?</p>
</div>
<div class="post-text" itemprop="text">
<p>In <code>email.py</code>, the import should be:</p>
<pre><code>from email.mime.multipart import smtplib
</code></pre>
<p>Or possibly:</p>
<pre><code>import smtplib
from email.mime.multipart import [...]
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Your 'import smtplib' statement is correct.   </p>
<p>Please double check the source code that you are sharing, as I dont see the ' import smtplib from email.mime.multipart'anywhere in your source. </p>
<p>Typical way of implementing the email sending logic in python can be found <a href="https://docs.python.org/3.6/library/email-examples.html" rel="nofollow noreferrer">here</a> . and the library doc <a href="https://docs.python.org/3/library/smtplib.html#" rel="nofollow noreferrer">here</a></p>
</div>
<div class="post-text" itemprop="text">
<p>You have a script <code>C:/Users/Kevin/Desktop/Python\email.py</code> that shadows <a href="https://docs.python.org/3/library/email.html" rel="nofollow noreferrer">email</a> package from stdlib. Rename your script.</p>
<p>In the future avoid script names that are already taken by stdlib. Especially avoid <a href="https://docs.python.org/3/library/test.html" rel="nofollow noreferrer">test.py</a>! :-)</p>
</div>
<span class="comment-copy">are you sharing the correct source? 'import smtplib' is valid import, it should not throw the error 'import smtplib from email.mime.multipart' ... try importing it from python interpreter to verify.  Ref <a href="https://docs.python.org/3/library/smtplib.html#" rel="nofollow noreferrer">docs.python.org/3/library/smtplib.html#</a></span>
<span class="comment-copy">this does not work. &gt;&gt;&gt; from email.mime.multipart import smtplib Traceback (most recent call last):   File "&lt;stdin&gt;", line 1, in &lt;module&gt; ImportError: cannot import name smtplib</span>
<span class="comment-copy">My guess is that the rest was cut off.  You probably just missed a carriage return after the first <code>import smtplib</code>.  Try pasting your imports into your question above.</span>
